# LyncZ

./: .gitignore  .gitmodules  .railwayignore  LICENSE  README.md  package.json  pnpm-lock.yaml  railway.toml  turbo.json
apps/web/: env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/messages/: en.json  zh-CN.json  zh-TW.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/app/blog/[slug]/: BlogPostPageClient.tsx  page.tsx
apps/web/src/app/buy/: page.tsx
apps/web/src/app/docs/: layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/docs/how-it-works/: page.tsx
apps/web/src/app/sell/: page.tsx
apps/web/src/components/: Footer.tsx  LanguageSelector.tsx  LocaleProvider.tsx  MobileBottomNav.tsx  Navigation.tsx  Providers.tsx  SciFiBackground.tsx  WalletButton.tsx
apps/web/src/components/blog/: HowLyncZWorksDemo.tsx  TraditionalP2PVsLyncZTable.tsx
apps/web/src/components/buy/: BuyProgress.tsx  BuyerInfoInput.tsx  ExecuteTrade.tsx  OrderSelector.tsx  PaymentInstructions.tsx
apps/web/src/components/buyer/: MyTrades.tsx
apps/web/src/components/debug/: AdminPanel.tsx  DatabaseViewer.tsx
apps/web/src/components/orders/: CreateOrderForm.tsx
apps/web/src/components/seller/: MyOrders.tsx  NotificationSettings.tsx  SellerTrades.tsx
apps/web/src/components/ui/: dropdown-menu.tsx
apps/web/src/hooks/: useBuyerTrades.ts  useChainGuard.ts  useCreateOrder.ts  useOrders.ts  useSellerOrders.ts  useSellerTrades.ts  useUpdateExchangeRate.ts  useUserTrades.ts  useWithdraw.ts
apps/web/src/lib/: api.ts  contractErrors.ts  contracts.ts  notion.ts  tokens.ts  wagmi.ts
services/relay/: Cargo.toml  Dockerfile
services/relay/.cargo/: config.toml
services/relay/abi/: AlipayVerifier.json  LyncZEscrow.json  SimpleFeeCalculator.json
services/relay/migrations/: 001_schema.sql
services/relay/src/: config.rs  lib.rs
services/relay/src/api/: mod.rs  routes.rs  state.rs  types.rs
services/relay/src/api/handlers/: account.rs  mod.rs  orders.rs  settlement.rs  trades.rs
services/relay/src/axiom_prover/: mod.rs
services/relay/src/blockchain/: client.rs  events.rs  mod.rs  types.rs
services/relay/src/crypto/: hash.rs  mod.rs
services/relay/src/db/: account_emails.rs  mod.rs  models.rs  orders.rs  trades.rs  withdrawals.rs
services/relay/src/email/: mod.rs  templates.rs
verifiers/alipay/: .gitignore
verifiers/alipay/.github/workflows/: ci.yml
verifiers/alipay/circuits/: .gitignore  Cargo.toml
verifiers/alipay/circuits/openvm/guest/: .gitignore  Cargo.toml  openvm.toml
verifiers/alipay/circuits/openvm/guest/src/: main.rs
verifiers/alipay/circuits/openvm/utils/: Cargo.toml  gen_input.rs
verifiers/alipay/pdf-utils/: .gitignore  Cargo.toml  README.md
verifiers/alipay/pdf-utils/core/: Cargo.toml  README.md
verifiers/alipay/pdf-utils/core/examples/: dump_lines.rs
verifiers/alipay/pdf-utils/core/src/: lib.rs
verifiers/alipay/pdf-utils/extractor/: Cargo.toml  README.md
verifiers/alipay/pdf-utils/extractor/src/: cmap.rs  encoding.rs  font.rs  lib.rs  parser.rs
verifiers/alipay/pdf-utils/signature-validator/: Cargo.toml  README.md
verifiers/alipay/pdf-utils/signature-validator/src/: lib.rs  pkcs7_parser.rs  signed_bytes_extractor.rs
(+11 files in other folders)
