[package]
name = "lyncz-relay"
version = "0.2.0"
edition = "2021"
description = "LyncZ relay service - backend for P2P fiat-crypto escrow"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal handling for prices and amounts
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
async-trait = "0.1"

# Database (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Web framework (Axum)
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = "1.0"

# Blockchain interaction
ethers = { version = "2.0", features = ["abigen", "ws"] }
hex = "0.4"

# Axiom API client
reqwest = { version = "0.11", features = ["json"] }

# OpenVM serialization (for Axiom input streams)
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }

# Hashing (for local expected hash computation)
sha2 = "0.10"

# PDF text extraction (for parsing Alipay receipts)
extractor = { path = "../../verifiers/alipay/pdf-utils/extractor" }

# PDF signature validation (for extracting public key DER hash)
signature-validator = { path = "../../verifiers/alipay/pdf-utils/signature-validator" }

# Temporary files (for testing)
tempfile = "3.8"

# Random number generation (for private codes)
rand = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[[bin]]
name = "lyncz-relay"
path = "src/bin/api-server.rs"

[[bin]]
name = "auto-cancel"
path = "src/bin/auto-cancel.rs"
