[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
signature-validator = { path = "../signature-validator" }
extractor = { path = "../extractor" }
hex = "0.4"

[features]
# Enable OpenVM SHA-256 accelerator (propagates to signature-validator)
openvm_accel = ["signature-validator/openvm_accel"]