[package]
name = "signature-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
simple_asn1 = "0.6.3"
rsa = "0.9.0"
sha2 = { version = "0.10.8", features = ["oid"] }
num-bigint = "0.4.6"

# OpenVM SHA-256 accelerator (for zkVM guest)
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", optional = true }

[features]
default = []
openvm_accel = ["openvm-sha2"]
